[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.67",
    "chromadb>=1.3.0",
    "langchain>=1.0.2",
    "langchain-aws>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.1.3",
    "pytest>=8.4.2",
]
